Add test runner
Renames the single-register ns to 'single' for consistency with 'multi'.
Adds a top-level test runner with command-line option handling and exit
statuses suitable for CI integration.